src/objects/GLBL_Error_Log__c.object
<CustomObject>
    <fields>
        <fullName>Data_External_ID__c</fullName>
        <label>Data External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Last_Modified_Date__c</fullName>
        <label>Data Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Data_Last_Modified_User__c</fullName>
        <label>Data Last Modified User</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_SFDC_ID__c</fullName>
        <label>Data SFDC ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Code__c</fullName>
        <label>Error Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Severity__c</fullName>
        <label>Severity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Source_Object__c</fullName>
        <label>Source Object</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_System__c</fullName>
        <label>Source System</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Object__c</fullName>
        <label>Target Object</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_System__c</fullName>
        <label>Target System</label>
        <length>80</length>
        <type>Text</type>
    </fields>
</CustomObject>